feat: Agregar lazy loading para imágenes en los componentes FAQ, magazine.tsx, titles.tsx, package.json, main.tsx, navigation.tsx, translation/i18next.tsx, translation/languageSelect.tsx, metrics.tsx y testimonials.tsx
Se agregó lazy loading para imágenes en varios componentes, incluyendo FAQ, magazine.tsx, titles.tsx, package.json, main.tsx, navigation.tsx, translation/i18next.tsx, translation/languageSelect.tsx, metrics.tsx y testimonials.tsx. Esto mejora el rendimiento de carga de la página al cargar las imágenes solo cuando están en el viewport.

--- a/src/translation/English.json
+++ b/src/translation/English.json
@@ -50,6 +50,7 @@
   },
   "faq": {
     "title": "Frequently Asked Questions",
+    "description": "Below you will find some of the most frequently asked questions we receive. If you do not find the answer you are looking for, please do not hesitate to contact us.",
     "noQuestions": "No questions available at the moment.",
     "question1": "What is the admission process?",
     "answer1": "The admission process involves submitting an application form, attending an interview, and providing necessary documents.",
